2007-05-09  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala: don't add default include directives for
	  VAPI files, fixes bug 436761

2007-05-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: correct strstr cname, patch by Zsombor
	* vapi/gtk+-2.0.vala: add ellipsis to Gtk.ListStore.set() and
	  Gtk.TreeStore.set()
	* vapi/gdk-2.0.vala, vapi/gtk+-2.0.vala: update to GTK+ 2.10.12

2007-05-07  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala,
	  gobject/valacodegeneratormemberaccess.vala: ensure that local
	  variables don't use keywords in the C code

2007-05-07  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: declare variables at the beginning of blocks as
	  required for C89
	* gobject/valacodegeneratorclass.vala: avoid empty private struct
	  declaration
	* vapi/glib-2.0.vala: use g_ascii_strtoll instead of strtoll

	Patch by Hans Breuer

2007-05-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala,
	  gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratorinterface.vala,
	  gobject/valacodegeneratorinvocationexpression.vala
	  gobject/valacodegeneratormemberaccess.vala,
	  gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorsignal.vala,
	  gobject/valacodegeneratorsourcefile.vala, 
	  gobject/valacodegeneratorstruct.vala: split code generator
	* gobject/Makefile.am, vapigen/Makefile.am: update

2007-05-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala: move code generator to new gobject
	  directory
	* configure.ac, Makefile.am, vala/Makefile.am, gobject/Makefile.am,
	  compiler/Makefile.am, vapi/Makefile.am: update

2007-05-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: GSList fixes and GIConv, patch by Michael Lawrence

2007-05-02  Jürg Billeter  <j@bitron.ch>

	* vapigen/gidlgen/gidlgen.in: use configured libdir, remove bashism,
	  based on patch by Mathias Hasselmann
	* vapigen/gidlgen/Makefile.am: update
